--- a/index.html
+++ b/index.html
@@ -1247,7 +1247,7 @@
                 <div class="product-card" tabindex="0">
 
                   <figure class="card-banner">
-                    <img src="./assets/images/24h/image-1-2h4-9.jpg" width="312" height="350" loading="lazy"
+                    <img src="24h prodect/24h/image-1-2h4-9.jpg" width="312" height="350" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                       <a href="./24h prodect/24h-delivery prodect.html?id=Automatic-6-Meal" class="product-link card-badge">
                       Buy
@@ -1315,7 +1315,7 @@
                 <div class="product-card" tabindex="0">
 
                   <figure class="card-banner">
-                    <img src="./assets/images/24h/Pet Dog Bed Cat Beds -1.webp" width="312" height="350" loading="lazy"
+                    <img src="24h prodect/24h/Pet Dog Bed Cat Beds -1.webp" width="312" height="350" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                       <a href="./24h prodect/24h-delivery prodect.html?id=Pet-Dog-Bed-Cat-Beds" class="product-link card-badge">
                       Buy
